L3 CSS Overflow Fix

--- a/public/css/l3.css
+++ b/public/css/l3.css
@@ -63,6 +63,7 @@
 .image {
     max-width: 0;
     height: 100%;
+    overflow: hidden;
 }
 
 .image img {
